[package]
name = "op-alloy-protocol"
description = "Optimism protocol-specific types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Maili
maili-protocol.workspace = true

[features]
default = ["serde", "std"]
test-utils = ["maili-protocol/test-utils"]
arbitrary = ["maili-protocol/arbitrary"]
std = ["maili-protocol/std"]
serde = ["maili-protocol/serde"]
