[package]
name = "op-alloy-rpc-client"
description = "Optimism RPC Client"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# rpc
jsonrpsee.workspace = true
jsonrpsee-types.workspace = true

[features]
client = [
    "jsonrpsee/client",
    "jsonrpsee/async-client",
]
