[package]
name = "op-alloy-rpc-jsonrpsee"
description = "Re-export of maili-rpc-jsonrpsee"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
maili-rpc-jsonrpsee = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["maili-rpc-jsonrpsee/std"]
client = ["maili-rpc-jsonrpsee/client"]
