[package]
name = "op-alloy-rpc-jsonrpsee"
description = "Optimism RPC Client"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-primitives = { workspace = true, features = ["serde"] }

# rpc
jsonrpsee.workspace = true

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
]
client = [
    "jsonrpsee/client",
    "jsonrpsee/async-client",
]
