[package]
name = "op-alloy-rpc-types-engine"
description = "Optimism RPC types for the `engine` namespace"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Encoding
snap = "1.1.1"
ethereum_ssz = "0.8"

# Workspace
op-alloy-protocol.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["ssz"] }

# serde
serde = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }

# misc
derive_more = { workspace = true, features = ["display"] }
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde_json.workspace = true
arbtest.workspace = true
arbitrary = { workspace = true, features = ["derive"] }

[features]
default = ["std", "serde"]
std = [
  "alloy-primitives/std",
  "alloy-rpc-types-engine/std",
  "op-alloy-protocol/std",
]
serde = [
  "dep:serde",
  "dep:alloy-serde",
  "op-alloy-protocol/serde",
  "alloy-rpc-types-engine/serde",
]
arbitrary = ["std", "dep:arbitrary", "alloy-primitives/arbitrary", "alloy-primitives/rand"]
